# aura

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: agent.py  health.py
app/api/security/: api_key.py
app/config/: conf.py
app/domain/: agent.py
app/domain/prompts/: greeting.md  system.md
app/models/: agent.py  prompts.py
