[project]
name = "aura"
version = "0.1.0-alpha.1"
description = "The Digital Breath of Your Ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[all]>=0.128.0",
    "grandalf>=0.8",
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "isort>=7.0.0",
]
